fixed issue with safari mobile changing text sizes. added extra padding to the bottom of the footer. fixed vertical centering for language indicator on projects

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -15,6 +15,7 @@ body, html {
 body {
   margin-left: 3em;
   margin-right: 3em;
+  -webkit-text-size-adjust: none;
 }
 
 a {
@@ -111,13 +112,12 @@ a:hover {
 
 .content .projects .project .language {
   float: right;
-  text-align: right;
   border-radius: 0.5em;
   padding-right: 0.75em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   display: flex;
-  align-content: center;
+  align-items: center;
 }
 
 .content .projects .project .language .text {
@@ -217,6 +217,7 @@ a:hover {
   justify-content: space-around;
   left: 0;
   margin-top: 20px;
+  padding-bottom: 20px;
 }
 
 .footer .mail-icon {
@@ -237,6 +238,7 @@ a:hover {
   body {
     font-size: 10px;
   }
+
   .content p {
     font-size: 1.25em;
   }
